--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <h2>Mijn pagina's!</h2>
             <p>Hieronder ontdek je al mijn websites.</p>
             <ul>
-              <li><a href="https://kyano-degreve-5mma.github.io/Script/Kyano_DeGreve_5MMa-artikel" target="_blank">Artikel</a></li>
-              <li><a href="https://kyano-degreve-5mma.github.io/Script/kyano_de_greve-htmlmatchapp" target="_blank">Matchapp</a></li>
-              <li><a href="https://kyano-degreve-5mma.github.io/Script/KYanoDG_PopSmokeBandsite_5MMa" target="_blank">Bandsite</a></li>
+              <li><a href="Kyano_DeGreve_5MMa-artikel/" target="_blank">Artikel</a></li>
+              <li><a href="kyano_de_greve-htmlmatchapp/" target="_blank">Matchapp</a></li>
+              <li><a href="KyanoDG_PopSmokeBandsite_5MMa/" target="_blank">Bandsite</a></li>
               
             </ul>
           </div>
