--- a/prada/index.html
+++ b/prada/index.html
@@ -35,7 +35,30 @@
             </div>
     </header>
 
+    <main>
+        <section id="herobanner">
+            <div class="videoframe">
+                <video autoplay loop muted src="cq5dam.video.pradanux-large.1920.1080.webm"></video>
+            </div>
+        </section>
 
+        
+        <section id="trending">
+            <div class="flex-container-main">
+                <div class="flex-item">
+                    <img class="heren" src="/prada/cq5dam.web.1664.1664.avif" alt="productfoto">
+                </div>
+                <div class="flex-item">
+                    <img class="heren" src="/prada/cq5dam.web.1664.1664 (1).avif" alt="productfoto">
+                </div>
+                <div class="flex-item">
+                    <img class="heren" src="/prada/cq5dam.web.966.966.avif" alt="productfoto">
+                </div>
+            </div>
+        </section>
+
+
+    </main>
 </body>
 
 </html>
