--- a/prada/index.html
+++ b/prada/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="">WOMEN</a></li>
                     <li><a href="">MEN</a></li>
-                    <li><a href="">BAG</a></li>
+                    <li><a href="#bag">BAG</a></li>
                     <li><a href="">GIFTS</a></li>
                     <li><a href="">LINEA ROSSA</a></li>
                     <li><a href="">PRADASPHERE</a></li>
@@ -39,6 +39,9 @@
         <section id="herobanner">
             <div class="videoframe">
                 <video autoplay loop muted src="cq5dam.video.pradanux-large.1920.1080.webm"></video>
+                <figcaption>
+                    <h1>SS 2023 Men's Collection</h1>
+                </figcaption>
             </div>
         </section>
 
@@ -46,19 +49,93 @@
         <section id="trending">
             <div class="flex-container-main">
                 <div class="flex-item">
-                    <img class="heren" src="/prada/cq5dam.web.1664.1664.avif" alt="productfoto">
+                    <img class="heren" src="cq5dam.web.1664.1664.avif" alt="productfoto">
+                    <figcaption>
+                        <h1>Le sac Prada Moon</h1>
+                    </figcaption>
                 </div>
                 <div class="flex-item">
-                    <img class="heren" src="/prada/cq5dam.web.1664.1664 (1).avif" alt="productfoto">
+                    <img class="heren" src="cq5dam.web.1664.1664 (1).avif" alt="productfoto">
+                    <figcaption>
+                        <h1>Le sac Prada Symbole</h1>
+                    </figcaption>
                 </div>
                 <div class="flex-item">
-                    <img class="heren" src="/prada/cq5dam.web.966.966.avif" alt="productfoto">
+                    <img class="heren" src="cq5dam.web.966.966.avif" alt="productfoto">
+                    <figcaption>
+                        <h1>Le sac Prada Symbole</h1>
+                    </figcaption>
                 </div>
             </div>
         </section>
-
+        
+        <div class="flex-container">
+            <div class="flex-item">
+              <img src="pradabag2.webp" alt="productfoto" id="bag">
+              <div class="flex-container">
+                <div><h3>PRADA SHOULDER BAG</h3><p>Shoulder Bag Men</p></div>
+                <p>€ 1200</p>
+              </div>
+            </div>
+            <div class="flex-item">
+                <img src="pradaMuts.jpg" alt="productfoto">
+                <div class="flex-container">
+                  <div><h3>PRADA HAT</h3><p>Unisex PRADA hat</p></div>
+                  <p>€ 420</p>
+                </div>
+            </div>
+            <div class="flex-item">
+                <img src="pradamuts2.webp" alt="productfoto">
+                <div class="flex-container">
+                  <div><h3>PRADA GLASSES</h3><p>Unisex PRADA glasses</p></div>
+                  <p>€ 364</p>
+                </div>
+            </div>
+          </div>
 
     </main>
+    <footer>
+        <div class="footer-top">
+          <div class="footer-column">
+            <h4>Products</h4>
+            <ul>
+              <li><a href="#">Shoes</a></li>
+              <li><a href="#">Clothing</a></li>
+              <li><a href="#">Accessories</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>About PRADA</h4>
+            <ul>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Investors</a></li>
+              <li><a href="#">Sustainability</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>Help</h4>
+            <ul>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Order Status</a></li>
+              <li><a href="#">Shipping and Delivery</a></li>
+              <li><a href="#">Returns</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>Follow Us</h4>
+            <ul class="social-icons">
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2023 PRADA, Inc. All Rights Reserved</p>
+        </div>
+      </footer>
 </body>
 
 </html>
