--- a/prada/index.html
+++ b/prada/index.html
@@ -71,25 +71,40 @@
         
         <div class="flex-container">
             <div class="flex-item">
+            <figure>
               <img src="pradabag2.webp" alt="productfoto" id="bag">
+              <figcaption>
+                <button type="button"><span><i class="fas fa-bag-shopping"></i>buy</span></button>
+              </figcaption>
               <div class="flex-container">
                 <div><h3>PRADA SHOULDER BAG</h3><p>Shoulder Bag Men</p></div>
                 <p>€ 1200</p>
               </div>
+            </figure>
             </div>
             <div class="flex-item">
+              <figure>
                 <img src="pradaMuts.jpg" alt="productfoto">
+                <figcaption>
+                  <button type="button"><span><i class="fas fa-bag-shopping"></i>buy</span></button>
+                </figcaption>
                 <div class="flex-container">
                   <div><h3>PRADA HAT</h3><p>Unisex PRADA hat</p></div>
                   <p>€ 420</p>
                 </div>
+              </figure>
             </div>
             <div class="flex-item">
+              <figure>
                 <img src="pradamuts2.webp" alt="productfoto">
+                <figcaption>
+                  <button type="button"><span><i class="fas fa-bag-shopping"></i>buy</span></button>
+                </figcaption>
                 <div class="flex-container">
                   <div><h3>PRADA GLASSES</h3><p>Unisex PRADA glasses</p></div>
                   <p>€ 364</p>
                 </div>
+              </figure>
             </div>
           </div>
 
@@ -97,7 +112,7 @@
     <footer>
         <div class="footer-top">
           <div class="footer-column">
-            <h4>Products</h4>
+            <h4>PRODUCTS</h4>
             <ul>
               <li><a href="#">Shoes</a></li>
               <li><a href="#">Clothing</a></li>
@@ -105,7 +120,7 @@
             </ul>
           </div>
           <div class="footer-column">
-            <h4>About PRADA</h4>
+            <h4>ABOUT PRADA</h4>
             <ul>
               <li><a href="#">News</a></li>
               <li><a href="#">Careers</a></li>
@@ -114,7 +129,7 @@
             </ul>
           </div>
           <div class="footer-column">
-            <h4>Help</h4>
+            <h4>HELP</h4>
             <ul>
               <li><a href="#">Contact Us</a></li>
               <li><a href="#">Order Status</a></li>
@@ -123,7 +138,7 @@
             </ul>
           </div>
           <div class="footer-column">
-            <h4>Follow Us</h4>
+            <h4>FOLLOW US</h4>
             <ul class="social-icons">
               <li><a href="#"><i class="fab fa-instagram"></i></a></li>
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
