--- a/label/KyanoDG_LabelFestival_5MMa/Used Pictures/index.html
+++ b/label/KyanoDG_LabelFestival_5MMa/Used Pictures/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOUTHSIDE RECORDS | 2023 - LINE-UP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="Icon" type="image" href="static/logo goud.svg">
+    <link rel="Icon" type="image" href="statiuc/SouthsideRecords.svg">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="static/logo goud.svg" alt="">
+            <img src="statiuc/SouthSideRecords2.svg" alt="LOGO">
         </div>
         <nav>
           <ul>
-            <li><a href=""></a>ARTISTS</a></li>
-            <li><a href=""></a>RELEASES</a></li>
-            <li><a href=""></a>VIDEOS</a></li>
-            <li><a href=""></a>PAGES</a></li>
+            <li><a href="">ARTISTS</a></li>
+            <li><a href="">RELEASES</a></li>
+            <li><a href="">VIDEOS</a></li>
+            <li><a href="">PAGES</a></li>
           </ul>  
         </nav>
     </header>
