--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a href="kyano_de_greve-htmlmatchapp/" target="_blank">Matchapp</a></li>
               <li><a href="KyanoDG_PopSmokeBandsite_5MMa/" target="_blank">Bandsite</a></li>
               <li><a href="prada/" target="_blank">PRADA</a></li>
-              
+              <li><a href="label/">Label Festival</a></li>
             </ul>
           </div>
         </section>
