--- a/label/indexARTIEST.html
+++ b/label/indexARTIEST.html
@@ -15,15 +15,16 @@
     <header>
         <div class="logo">
             <img src="statiuc/SouthSideRecords2.svg" alt="LOGO">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="">ARTISTS</a></li>
-                <li><a href="">RELEASES</a></li>
-                <li><a href="">VIDEOS</a></li>
-                <li><a href="">PAGES</a></li>
-            </ul>
-        </nav>
+        </div><input type="checkbox" id="burger">
+        <label for="burger">
+            <nav>
+                <ul>
+                    <li><a href="">ARTISTS</a></li>
+                    <li><a href="">RELEASES</a></li>
+                    <li><a href="">VIDEOS</a></li>
+                    <li><a href="">PAGES</a></li>
+                </ul>
+            </nav>
     </header>
     <main>
         <section id="Artiest">
@@ -33,7 +34,10 @@
                 </div>
                 <div class="text">
                     <h1>Lil Uzi Vert</h1>
-                    <p>Met zijn unieke stijl, onmiskenbare flow en grensverleggende muziek heeft Lil Uzi Vert de wereld van de hiphop stormenderhand veroverd. Geboren als Symere Woods in Philadelphia, Pennsylvania, bracht hij zijn jeugd door met het verkennen van verschillende muziekgenres, wat zijn eclectische benadering van rap beïnvloedde.</p>
+                    <p>Met zijn unieke stijl, onmiskenbare flow en grensverleggende muziek heeft Lil Uzi Vert de wereld
+                        van de hiphop stormenderhand veroverd. Geboren als Symere Woods in Philadelphia, Pennsylvania,
+                        bracht hij zijn jeugd door met het verkennen van verschillende muziekgenres, wat zijn
+                        eclectische benadering van rap beïnvloedde.</p>
                 </div>
                 <div class="icons">
                     <a href="#"><i class="fab fa-facebook"></i></a>
